# osx-colors

./: .flake8  .gitignore  .pylintrc  Makefile  Pipfile  README.md  pyproject.toml  script.sh  setup.cfg  setup.py
.github/workflows/: ci.yml  release.yml
src/: __main__.py  color_utils.py  colors.py  notify_apps.applescript  settings.py
tests/: test_color_utils.py  test_colors.py  test_main.py
