[metadata]
name=osx-colors
author=Clint Plummer
author_email=hello@clintp.xyz
description=Set osxs accent/highlight colors using the commandline
license = MIT
long_description = file: README.md
long_description_content_type=text/markdown
keywords=osx colorscheme terminal-emulators changing-colorschemes
url=https://github.com/yuhonas/osx-colors
platforms = Darwin
classifiers =
    Environment :: MacOS X
    Operating System :: MacOS
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.8, <4
packages = src
test_suite = tests

[options.entry_points]
console_scripts =
    osx-colors = src.__main__:main
