[metadata]
name=osx-colors
author=Clint Plummer
author_email=hello@clintp.xyz
description=Set osxs accent/highlight colors using the commandline
license = MIT
long_description = file: README.md
long_description_content_type=text/markdown
keywords=osx colorscheme terminal-emulators changing-colorschemes
url=https://github.com/yuhonas/osx-colors
platforms = Darwin
classifiers =
    Environment :: MacOS X
    Operating System :: MacOS
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
python_requires = >=3.9, <4
packages = src
test_suite = tests
include_package_data = True

[options.entry_points]
console_scripts =
    osx-colors = src.__main__:main

[options.package_data]
src = *.applescript
